build_error.txt
    Checking code-rag v0.1.0 (I:\01-Master_Code\Test-Labs\code-rag)
error[E0308]: mismatched types
   --> src\storage.rs:137:21
    |
137 |             .select(vec!["filename", "last_modified"])
    |              ------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Select`, found `Vec<&str>`
    |              |
    |              arguments to this method are incorrect
    |
    = note: expected enum `lancedb::query::Select`
             found struct `Vec<&str>`
note: method defined here
   --> C:\Users\ASCC\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\lancedb-0.23.1\src\query.rs:405:8
    |
405 |     fn select(self, selection: Select) -> Self;
    |        ^^^^^^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `code-rag` (lib) due to 1 previous error
